--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -191,6 +191,10 @@
 
     <!-- reference volume index for music stream to limit headphone volume and display warning -->
     <integer name="config_safe_media_volume_index">10</integer>
+    
+    <!-- buttons -->
+    <integer name="config_deviceHardwareWakeKeys">65</integer>
+    <integer name="config_deviceHardwareKeys">83</integer>
 
      <!-- disable button backlight setting -->
     <integer name="config_buttonBrightnessSettingDefault">0</integer>
